# haildir

./: .gitignore  README.md  Rakefile  architecture.md  config.example.json  pyproject.toml
haildir/: cli.py  hail.py  search.py
haildir/assets/: email.html  email.js  index.html  index.js  style.css
src/haildir/: cli.py  search.py
src/haildir/assets/: email.js  index.html  index.js  package.json  style.css
test/maildir/cur/: test_email_1  test_email_2  test_email_3  test_email_4
