[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "haildir"
version = "0.1.0"
description = "Convert Maildir archives to a static, searchable HTML site."
readme = "README.md"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
]

[project.scripts]
haildir = "haildir.cli:main"
